--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,15 @@
 body {
   font-family: sans-serif;
+  background-color: #9DE5FF;
+}
+
+.container {
+  width: 1200px;
 }
 
 .data {
   width: 500px;
-  height: 450px;
+  height: 440px;
   background-color: #F2B544;
   float: left;
   margin-left: 20px;
@@ -37,7 +42,7 @@ body {
   height: 40px;
   width: 80px;
   border-radius: 5px;
-  margin: 0px;
+  margin: 3px;
   padding: 0px;
   font-size: 16px;
   color: #054C68;
@@ -49,6 +54,7 @@ body {
   width: 900px;
   font-size: 16px;
   margin-left: 40px;
+  display: none;
 }
 
 a:link {
@@ -66,14 +72,17 @@ a:hover {
 
 
 .poster {
-  width: 350px;
   float: left;
   text-align: left;
   margin-top: 10px;
   margin-left: 15px;
-  width: 450px;
-  position: relative;
+  padding: 0px;
+  /*width: 450px;*/
+  display: none;
+  border-radius: 10px;
+  border: 10px solid #054C68;
 }
+
 
 .headline {
 
@@ -118,8 +127,8 @@ p.runtime {
 }
 
 img {
-  padding-right: 30px;
-  padding-top: 10px;
+  padding: 0px;
+  margin: 0px;
 }
 
 
