--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,7 @@ body {
   background-color: #F2B544;
   float: left;
   margin-left: 20px;
-  margin-top: 10px;
+  margin-top: 30px;
   padding: 10px;
   border-radius: 10px;
   border: 10px solid #054C68;
@@ -89,7 +89,7 @@ a:hover {
 .poster {
   float: left;
   text-align: left;
-  margin-top: 10px;
+  margin-top: 30px;
   margin-left: 25px;
   padding: 0px;
   /*width: 450px;*/
@@ -118,7 +118,7 @@ h2 {
   font-size: 16px;
   margin: 0px;
   padding: 0px;
-  width: 180px;
+  /*width: 180px;*/
   display: inline-block;
   color: #999787;
 }
@@ -128,13 +128,15 @@ p.ratings {
   padding: 0px;
   display: inline-block;
   font-weight: bold;
-  width: 180px;
+  margin-left: 10px;
+  /*width: 180px;*/
   font-size: 16px;
   color: #999787;
 }
 
 p.runtime {
   margin: 0px;
+  margin-left: 10px;
   padding: 0px;
   display: inline-block;
   font-size: 16px;
